2018-02-28 [1.42 Bld 126]

- Addition    : add AT43USB355

- Bugfix      : when writing line to .i file that contained a macro
                call and a label, only write out the label, plus an
                eventual comment.

2018-02-24 [1.42 Bld 125]

- Bugfix      : correct argument checking for CHARSET

- Bugfix      : If a line calling a macro contains a label not consumed
                by the macro, output the line (minus tha macro call)
                in the -P output

- Addition    : Optionally display column and position in source line
                for some errors
2018-01-21 [1.42 Bld 124]

- Addition    : add ATmega{8|16|32}U2,
                    ATmega{16|32}U4,
                    ATmega32U6,AT90USB646/647,AT90USB1286/1287

- Bugfix      : correct address space deduction for AVR

- Bugfix      : defining CPU aliases for AVR works again

2017-12-26 [1.42 Bld 123]

- Addition    : add ATtiny48/88/43u/441/841/828/1634/87/167/
                4/5/9/10/20/40/102/104/28/11/12/15/13A/24A/44A/
                84A, AT90S2323/2333/2343/8534

- Addition    : replace MACEXP with MACEXP_DFT/MACEXP_OVR

2017-11-27 [1.42 Bld 122]

- Bugfix      : correct double ASSR definition for ATmega8/16/32

- Bugfix      : correct UPE definition for ATmega162

- Bugfix      : correct SFR area size for ATmega1284RFR2

- Addition    : add a first batch of ATtiny variants

2017-11-21 [1.42 Bld 121]

- Bugfix      : correct behaviour of DATA for Atmel AVR

2017-11-20 [1.42 Bld 120]

- Addition    : add more ATmega variants

- Addition    : more flexible usage of ENUMs

- Addition    : if a statement was called with an incorrect number of
                arguments, the allowed range is printed as extended
                error message

- Addition    : if a statement or addressing mode is not supported on
                the selected CPU, the CPU variants supporting it are
                listed as extended error message
