@@ -146,15 +146,12 @@ static void DecodeB(Word Code)
     Word AdrWord;
     Boolean OK;
 
+    FirstPassUnknown = False;
     AdrWord = EvalIntExpression(ArgStr[1], UInt13, &OK);
-    if (OK)
+    if (OK && ChkSamePage(EProgCounter(), AdrWord, 7))
     {
-      if ((!SymbolQuestionable) && ((((int)EProgCounter()) >> 7) != (AdrWord >> 7))) WrError(1910);
-      else
-      {
-        CodeLen = 1;
-        WAsmCode[0] = 0x180 + (AdrWord & 0x7f);
-      }
+      CodeLen = 1;
+      WAsmCode[0] = 0x180 + (AdrWord & 0x7f);
     }
   }
 }
