@@ -1,3 +1,8 @@
+2018-03-04 [1.42 Bld 127]
+
+- Bugfix      : avoid 'target not on same page' for forward references
+                on several platforms
+
 2018-02-28 [1.42 Bld 126]
 
 - Addition    : add AT43USB355
